fix: Blinda la raíz contra el scroll horizontal con overflow-x clip

--- a/scss/elements/_base.scss
+++ b/scss/elements/_base.scss
@@ -13,7 +13,7 @@ body {
   background-image: radial-gradient(#{$color-ink} 1px, transparent 1px);
   background-size: 24px 24px;
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 h1, h2, h3, h4 {
